@@ -7,3 +7,5 @@ bugs:
 * handle ctrl-c in network mode properly...
 * jak się ma zachować w commandline mode a jak w daemon mode? kiedy wyświetlać konfigurację?
 * obsługa błędów w remote control
+* z check backends trzeba coś zrobić
+* 'stats' powinien mieć ilość pętli, jak vmstat
