@@ -1,12 +1,13 @@
-#!/usr/bin/python
+#!/usr/bin/python2.5
 
 import sys
 import logging
 import threading
 
-from utils import *
-from cmd import *
-from network import *
+from utils import params, l, parse_cmdline, setup_logging, print_logo, print_cfg
+from network import test_connection, cbpx_connector, cbpx_listener
+from cmd import cmd_runner
+from ui import ui_net, ui_readline
 
 # ------------------------------------------------------------------------
 # --- MAIN ---------------------------------------------------------------
@@ -45,7 +46,7 @@ if not success:
     print " Exiting due to backend connection errors."
     sys.exit(1)
 
-# start proxy
+# start proxy listener and connector threads
 
 try:
     backends = [(params.active_ip, params.active_port), (params.standby_ip, params.standby_port)]
@@ -63,20 +64,19 @@ except Exception, e:
     l.error("Error starting listener/connector threads: %s" % str(e))
     sys.exit(1)
 
-# start command interface
+# start command interface (this is in MainThread thread, not separate thread)
 
-if int(params.rc_port) > 0:
-    l.info("Creating network command interface")
-    cmd_if = cmd_interface_net()
-else:
-    l.info("Creating interactive command interface")
-    cmd_if = cmd_interface_readline()
-
-l.info("Creating command runner")
-cmd_run = cmd_runner(cmd_if)
-
-l.info("Entering command runner loop")
-cmd_run.run()
+try:
+    if int(params.rc_port) > 0:
+        l.info("Starting command runner with network user interface")
+        cmd_runner(ui_net()).run()
+    else:
+        l.info("Starting commend runner with readline user interface")
+        cmd_runner(ui_readline()).run()
+except Exception, e:
+    print " Error running command interface: %s" % str(e)
+    l.error("Error running command interface: %s" % str(e))
+    # no sys.exit() here, we need to clean up things a bit
 
 # cleanup and exit
 l.debug("Closing listener")
